<resources>
    <string name="app_name">Project_SNS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">contentDescription</string>
    <string name="test">테스트</string>
    <string name="slash">/</string>
    <string name="number1">1</string>
    <string name="close">닫기</string>

    <!-- Chat -->
    <string name="message">메시지</string>
    <string name="chat_text">메세지를 입력해주세요</string>
    <string name="chat_room_none">이전에 나눈 메세지가 없습니다!</string>
    <string name="chat_room_image">이미지 미리보기</string>
    <string name="chat_list_start">친구와 채팅 시작하기</string>
    <string name="chat_list">채팅 목록</string>

    <!-- Dialog -->
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>

    <!-- Edit -->
    <string name="edit">프로필 수정</string>
    <string name="edit_confirm">수정하기</string>
    <string name="edit_intro">소개</string>
    <string name="edit_intro_text">한줄 소개를 입력해주세요</string>
    <string name="edit_email">이메일</string>
    <string name="edit_email_text">이메일을 입력해주세요</string>
    <string name="edit_name">이름</string>
    <string name="edit_name_text">이름을 입력해주세요</string>

    <!-- Friend -->
    <string name="friend">친구 목록</string>
    <string name="friend_text">친구의 이름이나 이메일을 입력해주세요</string>

    <!-- MyProfile -->
    <string name="my_request">친구 요청</string>
    <string name="my_cancel">요청 취소</string>
    <string name="my_delete">친구 삭제</string>
    <string name="my_message">메세지 보내기</string>
    <string name="my_number">개</string>
    <string name="my_post">게시물</string>
    <string name="my_profile_edit">프로필 수정</string>
    <string name="my_friend">친구 목록</string>
    <string name="my_null_post">게시물을 추가해보세요!</string>
    <string name="my_map">장소 키워드를 검색해주세요</string>
    <string name="my_search_map">검색어를 입력해주세요</string>

    <!-- Home -->
    <string name="home_today">오늘의 추천 운동</string>
    <string name="home_low">초급자</string>
    <string name="home_middle">중급자</string>
    <string name="home_high">상급자</string>
    <string name="home_comment">댓글을 남겨보세요</string>
    <string name="home_comment_none">아직 댓글이 없습니다</string>
    <string name="home_comment_suggest">댓글을 남겨보세요!</string>
    <string name="home_comment_for">님 에게 댓글</string>
    <string name="home_comment_more">댓글 불러오기</string>
    <string name="home_more">게시물 불러오기</string>
    <string name="home_edit">(수정됨)</string>

    <!-- Login -->
    <string name="login">로그인</string>
    <string name="login_text1">아직 계정이 없으신가요?</string>
    <string name="login_signup">회원가입</string>
    <string name="login_email">이메일</string>
    <string name="login_email_text">이메일을 입력해주세요</string>
    <string name="login_password">비밀번호</string>
    <string name="login_password_text">비밀번호를 입력해주세요</string>

    <!-- PostAdd -->
    <string name="post_add">게시물 생성</string>
    <string name="post_add_confirm">공유하기</string>
    <string name="post_add_location">위치 설정</string>
    <string name="post_add_location_text">위치를 추가하시려면 눌러주세요</string>
    <string name="post_add1">텍스트</string>
    <string name="post_add_text">내용을 입력해주세요</string>

    <!-- Post -->
    <string name="post_comment">댓글 보기</string>

    <!-- Today -->
    <string name="today">오늘의 운동</string>

    <!-- Search -->
    <string name="search_text">이메일 or 키워드를 입력해주세요.</string>
    <string name="search_text2">에 대한 검색</string>
    <string name="search_text_none">유저를 검색해보세요!</string>

    <!-- Setting -->
    <string name="setting">설정</string>
    <string name="setting_personal">개인정보 처리방침</string>
    <string name="setting_mode">다크모드 설정</string>
    <string name="setting_info">고객센터</string>
    <string name="setting_leave">회원탈퇴</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_ver">ver. release</string>

    <!-- CancelAccount -->
    <string name="cancel_account">회원탈퇴</string>
    <string name="cancel_account_explain">회원탈퇴 하시면 정보는 복구가 불가능합니다.\n계속 하시려면 아래 칸에 계정 이메일을 적어주세요.</string>
    <string name="cancel_account_button">제출하기</string>
    <string name="cancel_account_mail">E - mail</string>


    <!-- SignUp -->
    <string name="sign">회원가입</string>
    <string name="sign_password">비밀번호</string>
    <string name="sign_password_text">비밀번호를 입력해주세요</string>
    <string name="sign_password_confirm">비밀번호확인</string>
    <string name="sign_password_confirm_text">비밀번호를 한번 더 입력해주세요</string>
    <string name="sign_email">이메일</string>
    <string name="sign_email_text">이메일을 입력해주세요</string>
    <string name="sign_name">이름</string>
    <string name="sign_name_text">이름을 입력해주세요</string>
    <string name="sign_name_check_text">이름을 확인해주세요</string>
    <string name="sign_email_check_text">이메일을 확인해주세요</string>
    <string name="sign_password_check_text">비밀번호를 확인해주세요</string>
    <string name="sign_password_confirm_check_text">비밀번호를 확인해주세요</string>

    <!-- Item -->
    <string name="item_comment">댓글 남기기</string>
    <string name="item_comment_check">댓글 보기</string>
    <string name="item_comment_delete">삭제</string>
    <string name="item_time">마지막으로 전송한 시각</string>
    <string name="item_comment_edit">수정</string>
    <string name="item_comment_more">댓글 더 보기</string>
    <string name="item_comment_close">댓글 닫기</string>

    <!-- BottomSheet -->
    <string name="bottom_edit">게시물 수정하기</string>
    <string name="bottom_save">오프라인 저장하기</string>
    <string name="bottom_location">위치정보 보기</string>
    <string name="bottom_delete">삭제하기</string>

    <!-- PostEdit -->
    <string name="post_edit">게시물 수정</string>
    <string name="post_edit_btn">수정하기</string>

    <!-- Notification -->
    <string name="notification_title">알림</string>
    <string name="notification_request">친구 요청</string>
    <string name="notification_request_explain">요청을 확인 할 수 있습니다.</string>
    <string name="notification_none">표시할 알림이 없습니다</string>

    <!-- FollowPage -->
    <string name="follow_title">친구 요청</string>
    <string name="follow_item_accept">수락</string>
    <string name="follow_item_reject">거절</string>
    <string name="follow_item_intro">표시할 알림이 없습니다!</string>


</resources>