<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.view.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_Login_B">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_Login1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/login"
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_Login1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/ic_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Login1"
                android:contentDescription="@string/contentDescription"/>

<!--            <ImageView-->
<!--                android:id="@+id/iv_Login1"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_marginStart="155dp"-->
<!--                android:layout_marginTop="45dp"-->
<!--                android:layout_marginEnd="155dp"-->
<!--                android:layout_marginBottom="55dp"-->
<!--                android:background="@drawable/ic_main"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/cl_Login_M"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/tv_Login1" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_Login_M"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:padding="20dp"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_Login1">

                <TextView
                    android:id="@+id/tv_Login2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_email"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_Login_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/login_email_text"
                    android:padding="20dp"
                    android:background="@drawable/item_edittext"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint"
                    android:textSize="14sp"
                    android:autofillHints="no"
                    android:inputType="textEmailAddress"
                    app:layout_constraintTop_toBottomOf="@id/tv_Login2" />

                <TextView
                    android:id="@+id/tv_Login3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_password"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tv_Login2"
                    app:layout_constraintTop_toBottomOf="@+id/et_Login_Email" />

                <EditText
                    android:id="@+id/et_Login_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/login_password_text"
                    android:background="@drawable/item_edittext"
                    android:padding="20dp"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint"
                    android:textSize="14sp"
                    android:autofillHints="no"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@id/tv_Login3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_Login_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/item_btn_ripple"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_Login4" />

        <TextView
            android:id="@+id/tv_Login4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/login_text1"
            android:textColor="@color/hint"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_Login_SignUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_Login_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/login_signup"
            android:textColor="@color/text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_Login4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_Login4"
            app:layout_constraintTop_toTopOf="@+id/tv_Login4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>