<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".ui.view.main.setting.CancelAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCancelAccountBack"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/item_btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/contentDescription"/>

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/ivCancelAccountBack"
                app:layout_constraintEnd_toEndOf="@+id/ivCancelAccountBack"
                app:layout_constraintStart_toStartOf="@+id/ivCancelAccountBack"
                app:layout_constraintTop_toTopOf="@+id/ivCancelAccountBack"
                android:contentDescription="@string/contentDescription"/>

            <TextView
                android:id="@+id/tvCancelAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/cancel_account"
                android:textColor="@color/text"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ivCancelAccountBack"
                app:layout_constraintStart_toEndOf="@id/ivCancelAccountBack"
                app:layout_constraintTop_toTopOf="@id/ivCancelAccountBack" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCancelAccountCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/tvCancelAccountTitle">

                <TextView
                    android:id="@+id/tvCancelAccountExplain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_account_explain"
                    android:textColor="@color/text"
                    android:textSize="18sp"
                    android:padding="10dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etCancelAccountMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/cancel_account_mail"
                    android:textColorHint="@color/hint"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:paddingVertical="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tvCancelAccountExplain"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelAccountConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/item_btn_ripple"
        android:padding="12dp"
        android:text="@string/cancel_account_button"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>