<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivItemFollowTopLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/item"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/contentDescription"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        app:layout_constraintTop_toBottomOf="@+id/ivItemFollowTopLine">

        <ImageView
            android:id="@+id/ivItemFollowProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/item_profile"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemFollowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/test"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvItemFollowEmail"
            app:layout_constraintStart_toEndOf="@id/ivItemFollowProfile"
            app:layout_constraintTop_toTopOf="@id/ivItemFollowProfile"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvItemFollowEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/test"
            android:textColor="@color/hint"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/ivItemFollowProfile"
            app:layout_constraintStart_toEndOf="@id/ivItemFollowProfile"
            app:layout_constraintTop_toBottomOf="@+id/tvItemFollowName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnItemFollowAccept"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:text="@string/follow_item_accept"
            android:textColor="@color/text"
            android:background="@drawable/item_btn_ripple"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnItemFollowReject"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnItemFollowReject"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:text="@string/follow_item_reject"
            android:textColor="@color/text"
            android:background="@drawable/item_btn_ripple"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>